// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<ChooseRouteDropdown /> Filters shown routes when query is set 1`] = `
<DocumentFragment>
  <div
    class="relative w-full"
    data-headlessui-state=""
    data-testid="ChooseRouteDropdown1"
    id="choose-route-combobox"
  >
    <input
      aria-autocomplete="list"
      aria-expanded="false"
      class="h-full w-full border border-grey bg-white px-2 py-3 focus:outline-hidden transition-[border-radius] duration-100 ease-in-out ui-open:rounded-none ui-not-open:rounded-md"
      data-headlessui-state=""
      data-testid="ChooseRouteDropdown1::input"
      id="headlessui-combobox-input-:rb:"
      role="combobox"
      type="text"
      value=""
    />
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      class="absolute inset-y-0 right-0 h-full flex items-center justify-end px-3 text-left cursor-pointer focus:outline-hidden disabled:cursor-default w-full"
      data-headlessui-state=""
      data-testid="ChooseRouteDropdown1::button"
      id="headlessui-combobox-button-:rc:"
      tabindex="-1"
      type="button"
    >
      <div
        class="w-full"
      >
        Valitse reitti
      </div>
      <svg
        class="mr-1 text-2xl text-tweaked-brand"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
        />
      </svg>
      <i
        class="icon-arrow text-tweaked-brand transition duration-150 ease-in-out ui-open:-rotate-180 ui-not-open:rotate-0"
        style="font-size: 10px;"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`<ChooseRouteDropdown /> Filters shown routes when query is set 2`] = `
<DocumentFragment>
  <div
    class="relative w-full"
    data-headlessui-state=""
    data-testid="ChooseRouteDropdown1"
    id="choose-route-combobox"
  >
    <input
      aria-autocomplete="list"
      aria-expanded="false"
      class="h-full w-full border border-grey bg-white px-2 py-3 focus:outline-hidden transition-[border-radius] duration-100 ease-in-out ui-open:rounded-none ui-not-open:rounded-md"
      data-headlessui-state=""
      data-testid="ChooseRouteDropdown1::input"
      id="headlessui-combobox-input-:rb:"
      role="combobox"
      type="text"
      value=""
    />
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      class="absolute inset-y-0 right-0 h-full flex items-center justify-end px-3 text-left cursor-pointer focus:outline-hidden disabled:cursor-default w-full"
      data-headlessui-state=""
      data-testid="ChooseRouteDropdown1::button"
      id="headlessui-combobox-button-:rc:"
      tabindex="-1"
      type="button"
    >
      <div
        class="w-full"
      >
        Valitse reitti
      </div>
      <svg
        class="mr-1 text-2xl text-tweaked-brand"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
        />
      </svg>
      <i
        class="icon-arrow text-tweaked-brand transition duration-150 ease-in-out ui-open:-rotate-180 ui-not-open:rotate-0"
        style="font-size: 10px;"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`<ChooseRouteDropdown /> Filters shown routes when query is set 3`] = `
<DocumentFragment>
  <div
    class="relative w-full"
    data-headlessui-state="open"
    data-open=""
    data-testid="ChooseRouteDropdown1"
    id="choose-route-combobox"
  >
    <input
      aria-activedescendant="headlessui-combobox-option-:rg:"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-:rd:"
      aria-expanded="true"
      class="h-full w-full border border-grey bg-white px-2 py-3 focus:outline-hidden transition-[border-radius] duration-100 ease-in-out ui-open:rounded-none ui-not-open:rounded-md"
      data-headlessui-state="open"
      data-open=""
      data-testid="ChooseRouteDropdown1::input"
      id="headlessui-combobox-input-:rb:"
      role="combobox"
      type="text"
      value=""
    />
    <button
      aria-controls="headlessui-combobox-options-:rd:"
      aria-expanded="true"
      aria-haspopup="listbox"
      class="absolute inset-y-0 right-0 h-full flex items-center justify-end px-3 text-left cursor-pointer focus:outline-hidden disabled:cursor-default w-full"
      data-active=""
      data-headlessui-state="open active"
      data-open=""
      data-testid="ChooseRouteDropdown1::button"
      id="headlessui-combobox-button-:rc:"
      tabindex="-1"
      type="button"
    >
      <svg
        class="mr-1 text-2xl text-tweaked-brand"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
        />
      </svg>
      <i
        class="icon-arrow text-tweaked-brand transition duration-150 ease-in-out ui-open:-rotate-180 ui-not-open:rotate-0"
        style="font-size: 10px;"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`<ChooseRouteDropdown /> Opens dropdown when clicked and shows all routes 1`] = `
<DocumentFragment>
  <div
    class="relative w-full"
    data-headlessui-state=""
    data-testid="ChooseRouteDropdown1"
    id="choose-route-combobox"
  >
    <input
      aria-autocomplete="list"
      aria-expanded="false"
      class="h-full w-full border border-grey bg-white px-2 py-3 focus:outline-hidden transition-[border-radius] duration-100 ease-in-out ui-open:rounded-none ui-not-open:rounded-md"
      data-headlessui-state=""
      data-testid="ChooseRouteDropdown1::input"
      id="headlessui-combobox-input-:r2:"
      role="combobox"
      type="text"
      value=""
    />
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      class="absolute inset-y-0 right-0 h-full flex items-center justify-end px-3 text-left cursor-pointer focus:outline-hidden disabled:cursor-default w-full"
      data-headlessui-state=""
      data-testid="ChooseRouteDropdown1::button"
      id="headlessui-combobox-button-:r3:"
      tabindex="-1"
      type="button"
    >
      <div
        class="w-full"
      >
        Valitse reitti
      </div>
      <svg
        class="mr-1 text-2xl text-tweaked-brand"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
        />
      </svg>
      <i
        class="icon-arrow text-tweaked-brand transition duration-150 ease-in-out ui-open:-rotate-180 ui-not-open:rotate-0"
        style="font-size: 10px;"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`<ChooseRouteDropdown /> Opens dropdown when clicked and shows all routes 2`] = `
<DocumentFragment>
  <div
    class="relative w-full"
    data-headlessui-state=""
    data-testid="ChooseRouteDropdown1"
    id="choose-route-combobox"
  >
    <input
      aria-autocomplete="list"
      aria-expanded="false"
      class="h-full w-full border border-grey bg-white px-2 py-3 focus:outline-hidden transition-[border-radius] duration-100 ease-in-out ui-open:rounded-none ui-not-open:rounded-md"
      data-headlessui-state=""
      data-testid="ChooseRouteDropdown1::input"
      id="headlessui-combobox-input-:r2:"
      role="combobox"
      type="text"
      value=""
    />
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      class="absolute inset-y-0 right-0 h-full flex items-center justify-end px-3 text-left cursor-pointer focus:outline-hidden disabled:cursor-default w-full"
      data-headlessui-state=""
      data-testid="ChooseRouteDropdown1::button"
      id="headlessui-combobox-button-:r3:"
      tabindex="-1"
      type="button"
    >
      <div
        class="w-full"
      >
        Valitse reitti
      </div>
      <svg
        class="mr-1 text-2xl text-tweaked-brand"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
        />
      </svg>
      <i
        class="icon-arrow text-tweaked-brand transition duration-150 ease-in-out ui-open:-rotate-180 ui-not-open:rotate-0"
        style="font-size: 10px;"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`<ChooseRouteDropdown /> Opens dropdown when clicked and shows all routes 3`] = `
<DocumentFragment>
  <div
    class="relative w-full"
    data-headlessui-state="open"
    data-open=""
    data-testid="ChooseRouteDropdown1"
    id="choose-route-combobox"
  >
    <input
      aria-activedescendant="headlessui-combobox-option-:r7:"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-:r4:"
      aria-expanded="true"
      class="h-full w-full border border-grey bg-white px-2 py-3 focus:outline-hidden transition-[border-radius] duration-100 ease-in-out ui-open:rounded-none ui-not-open:rounded-md"
      data-focus=""
      data-headlessui-state="open focus"
      data-open=""
      data-testid="ChooseRouteDropdown1::input"
      id="headlessui-combobox-input-:r2:"
      role="combobox"
      type="text"
      value=""
    />
    <button
      aria-controls="headlessui-combobox-options-:r4:"
      aria-expanded="true"
      aria-haspopup="listbox"
      class="absolute inset-y-0 right-0 h-full flex items-center justify-end px-3 text-left cursor-pointer focus:outline-hidden disabled:cursor-default w-full"
      data-active=""
      data-headlessui-state="open active"
      data-open=""
      data-testid="ChooseRouteDropdown1::button"
      id="headlessui-combobox-button-:r3:"
      tabindex="-1"
      type="button"
    >
      <div
        class="w-full"
      >
        Valitse reitti
      </div>
      <svg
        class="mr-1 text-2xl text-tweaked-brand"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
        />
      </svg>
      <i
        class="icon-arrow text-tweaked-brand transition duration-150 ease-in-out ui-open:-rotate-180 ui-not-open:rotate-0"
        style="font-size: 10px;"
      />
    </button>
  </div>
</DocumentFragment>
`;
